# flip_prod_reco

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
flipkart/: data_ingestion.py
prometheus/: prometheus-configmap.yaml
