[project]
name = "flipkart-prs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "fastapi>=0.135.3",
    "flask>=3.1.3",
    "langchain>=1.2.14",
    "langchain-astradb>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "pandas>=3.0.2",
    "prometheus-client>=0.24.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]
